--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "version": 2,
-    "builds": [{ "src": "./api/index.js", "use": "@vercel/node"}],
+    "installCommand": "npm install",
     "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
   }
