--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,17 @@
 {
     "version": 2,
     "installCommand": "npm install",
+    "builds": [
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+    {
+        "src": "/(.*)",
+        "dest": "/"
+    }
+    ],
     "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
   }
