--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
     "version": 2,
     "installCommand": "npm install",
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }],
-    "routes": [{ "src": "/(.*)", "dest": "/api/index.js" }]
+    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
   }
