--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,3 @@
 {
-    "version": 2,
-    "installCommand": "npm install",
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
-  }
+    "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+}
